--- a/suwo_testing.ipynb
+++ b/suwo_testing.ipynb
@@ -33,7 +33,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#system(\"sudo apt install fftw3 ffmpeg libsndfile1 libsndfile1-dev libfftw3-3 libfftw3-dev\")\n",
         "remotes::install_github(\"maRce10/suwo\")\n",
         "install.packages(\"testthat\")\n",
         "library(testthat)\n",
@@ -46,7 +45,7 @@
         },
         "outputId": "882b0083-b9cf-460e-ec31-03f5487b4f33"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,6 +77,39 @@
             "(as ‘lib’ is unspecified)\n",
             "\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[36m──\u001b[39m \u001b[36mR CMD build\u001b[39m \u001b[36m─────────────────────────────────────────────────────────────────\u001b[39m\n",
+            "* checking for file ‘/tmp/Rtmp0JFWa1/remotes19d3fb7a7c3/maRce10-suwo-11df889/DESCRIPTION’ ... OK\n",
+            "* preparing ‘suwo’:\n",
+            "* checking DESCRIPTION meta-information ... OK\n",
+            "* checking for LF line-endings in source and make files and shell scripts\n",
+            "* checking for empty or unneeded directories\n",
+            "* looking to see if a ‘data/datalist’ file should be added\n",
+            "* building ‘suwo_0.1.0.tar.gz’\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "\n",
+            "Please cite 'suwo' as: \n",
+            "\n",
+            "\n",
+            "Araya-Salas, M., & J. Elizondo-Calvo. 2023. suwo: access nature media repositories through R. R package version 0.1.0.\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -90,7 +122,7 @@
       "metadata": {
         "id": "DbJGJIzHvRSZ"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -99,26 +131,10 @@
         "source(\"./tests/testthat/test_query_xenocanto.R\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JEDFE9xfwrhZ",
-        "outputId": "b4b36bb6-3c0b-4a69-edda-658b22eccea4"
+        "id": "JEDFE9xfwrhZ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[32mTest passed\u001b[39m 😀\n",
-            "\u001b[32mTest passed\u001b[39m 🌈\n",
-            "\u001b[32mTest passed\u001b[39m 😀\n",
-            "\u001b[32mTest passed\u001b[39m 😀\n",
-            "\u001b[32mTest passed\u001b[39m 🎊\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
