--- a/testing/testing-checking suwo functions.Rmd
+++ b/testing/testing-checking suwo functions.Rmd
@@ -24,7 +24,7 @@ remove.packages("suwo")
 
 remotes::install_github("ropensci-review-tools/pkgcheck")
 
-pkgs <- c("remotes", "curl", "RCurl", "jsonlite", "crayon", "devtools", "leaflet", "maps", "pkgcheck", "pkgstats", "testthat", "styler", "cli")
+pkgs <- c("remotes", "curl", "RCurl", "jsonlite", "crayon", "devtools", "leaflet", "maps", "pkgcheck", "pkgstats", "testthat", "styler", "cli", "beepr")
 
 # install/ load packages
 out <- lapply(pkgs, function(y) {
@@ -473,8 +473,10 @@ devtools::check(".", document = FALSE, run_dont_test = FALSE, vignettes = FALSE,
 # devtools::build_manual()
 
 # devtools::install()
-
+run.all()
 devtools::test()
+
+beepr::beep(2)
 
 # check in R version 3.X.X
 
@@ -602,6 +604,20 @@ in_adf <- query_inaturalist(term = term, format = "sound")
  
 ml_adf <- query_macaulay(term = term, format = "sound", path = tempdir())
 
+a <- rbind(xc_adf, wa_adf, gb_adf, in_adf, ml_adf)
+
+
+unique(a$file_extension)
+
+a[a$country == "Bolivia (Plurinational State of)" & !is.na(a$country), ]
+
+table(a$repository)
+
+a[is.na(a$file_extension),]
+
+View(gb_adt[is.na(gb_adt$file_extension),])
+
+gb_adt$occurrenceid[is.na(gb_adt$file_extension)]
 ```
 
 
@@ -890,6 +906,36 @@ in_adt$recordist <- sapply(strsplit(in_adt$recordist, ") "), "[[", 2)
 ml_adt$recordist
 
 ```
+
+# find issues in metadata formatting
+```{r}
+term <- "Turdus rufiventris"
+xc_adf <- query_xenocanto(term = term)
+
+wa_adf <- query_wikiaves(term = term, format = "sound")
+ 
+gb_adf <- query_gbif(term = term, format = "sound")
+
+in_adf <- query_inaturalist(term = term, format = "sound")
+ 
+ml_adf <- query_macaulay(term = term, format = "sound", path = tempdir())
+
+a <- rbind(xc_adf, wa_adf, gb_adf, in_adf, ml_adf)
+
+
+unique(a$file_extension)
+
+a[a$country == "Bolivia (Plurinational State of)" & !is.na(a$country), ]
+
+table(a$repository)
+
+a[is.na(a$file_extension),]
+
+View(gb_adt[is.na(gb_adt$file_extension),])
+
+gb_adt$occurrenceid[is.na(gb_adt$file_extension)]
+```
+
 
 # get observation token
 ```{r}
