--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ editor_options:
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 <!-- badges: start -->
 [![lifecycle](https://lifecycle.r-lib.org/articles/figures/lifecycle-experimental.svg)](https://lifecycle.r-lib.org/articles/stages.html)
-[![Dependencies](https://tinyverse.netlify.com/badge/suwo)](https://cran.r-project.org/package=suwo) 
+<!-- [![Dependencies](https://tinyverse.netlify.com/badge/suwo)](https://cran.r-project.org/package=suwo)  -->
 [![Project Status: Active  The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) 
 [![Licence](https://img.shields.io/badge/https://img.shields.io/badge/licence-GPL--2-blue.svg)](https://www.gnu.org/licenses/gpl-3.0.en.html) 
 <!-- [![minimal R version](https://img.shields.io/badge/R%3E%3D-`r strsplit(gsub("depends: R \\(|\\)", "", grep("^DEPENDS", ignore.case = TRUE, readLines(con = "./DESCRIPTION"), value = TRUE), ignore.case = TRUE), ",")[[1]][1]`-6666ff.svg)](https://cran.r-project.org/)  -->
@@ -21,7 +21,7 @@ editor_options:
   
 <!-- <img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
 
-<img src="man/figures/logo.png" alt="suwo logo" align="right" width = "25%" height="25%"/>
+<img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/>
 
 [suwo](https://github.com/maRce10/suwo) is intended streamline
 searching/downloading of nature media files (e.g. audios, photos) from
